--- a/WebApplication3/Content/MainStyle.css
+++ b/WebApplication3/Content/MainStyle.css
@@ -13568,3 +13568,17 @@ svg.mail-btn-more2-svg {
         background: #ff0022;
         border: 3px solid #ff0022;
     }
+
+
+div#news{
+margin-top:50px;
+margin-left:30%;
+width:600px;
+height:auto;
+}
+
+
+div.card {
+    display: flex;
+    flex-flow: column wrap;
+}
